# FlockingAlgorithm

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/data_structures/: Boid.cpp  Boid.h  QuadTree.h  hash_table.cpp  hash_table.h  k_means.cpp  k_means.h
src/tools/: MyLogger.cpp  MyLogger.h  logger.cpp  logger.h  methods.h
